--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+
 <body>
     
 </body>
-</html>
+    <title>Linked In</title>
+</head>
+<link rel="stylesheet" href="Linkedin.css">
+
+<h2><a href="" class="let">Linked</a>
+<a href="" class="chat">In</a></h2>
+
+<div class="cen">
+    <form action="">
+<fieldset class="line">
+<h2 class="in">Sign in</h2>
+<p><h6 class="stay">Stay updated on your professional world</h6></p>
+<input type="text" required placeholder="Email or Phone" name="email" class="number"><br><br>
+<input type="password" required placeholder="Password"  id="" class="pass"><br><br>
+<a href="" class="forgot">Forgot Password?</a><br><br>
+ 
+<button class="signin">Sign in</button>
+</fieldset>
+</div>
+</form>
+
+</html> 
