updated in new file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </body>
     <title>Linked In</title>
 </head>
-<link rel="stylesheet" href="Linkedin.css">
+<link rel="stylesheet" href="index.css">
 
 <h2><a href="" class="let">Linked</a>
 <a href="" class="chat">In</a></h2>
