--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-<body>
-    
-</body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linked In</title>
 </head>
+<body>
 <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.css">
 
-<h2><a href="" class="let">Linked</a>
-<a href="" class="chat">In</a></h2>
-
-<div class="cen">
-    <form action="">
-<fieldset class="line">
-<h2 class="in">Sign in</h2>
-<p><h6 class="stay">Stay updated on your professional world</h6></p>
-<input type="text" required placeholder="Email or Phone" name="email" class="number"><br><br>
-<input type="password" required placeholder="Password"  id="" class="pass"><br><br>
-<a href="" class="forgot">Forgot Password?</a><br><br>
- 
-<button class="signin">Sign in</button>
-</fieldset>
+<form >
+<div class="mb-3 mx-auto p-5">
+    <div class="text-center">
+<h2>Sign your LinkedIn</h2>
+<p>Stay updated on your professional world</p>
 </div>
-</form>
+<div  class="mb-3">
+    <label class="form-label">Email or Phone</label>
+<input type="email" class="form-control" required placeholder="Email or Phone">
+</div>
+<div class="mb-3">
+    <label class="form-label">Password</label>
+<input type="password" class="form-control" required placeholder="Password">
+</div>
+<div class="p-2">
+<a href="">Forgot Password?</a>
+</div>
+<div class="p-2">
+<button class="btn btn-primary w-100">Sign in</button>
+</div>
+</div>
 
+</form>
+</body>
 </html> 
+
+
